Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17873

Instantiating a QPixmap in a server application causes a crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.8.0
    • 4.7.1
    • GUI: Painting
    • None
    • Kubuntu 10.10, with latest updates.
    • a3a79fefe65ec12c4c34a69885c2d23d79538a97

    Description

      Creating a QPixmap from an application built around QCoreApplication causes a segfault. On X11, the crash is in QX11PixmapData::resize, which is natural as there is no X11 context when a QCoreApplication is used.

      Does this mean that an application using the QtGui module cannot be based around QCoreApplication?

      When trying the alternative approach, i.e. QApplication a(argc, argv, false), to avoid connecting to the X11 server, I still get a crash, but this time from QX11Info::appDepth.

      I've attached a minimal example which replicates the crash.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            e8johan Johan Thelin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes