Fixed auto-test failures caused by a3a79fefe65ec12.

QPixmaps might be unintentionally created through QVariant streaming for
example, so to prevent breaking existing applications we should just use
a warning instead, when creating a QPixmap in a non-GUI application.

Task-number: QTBUG-17873
Reviewed-by: aavit